# pygbm

./: .gitignore  Dockerfile  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/materials/: tutorial.ipynb
pygbm/: __init__.py  bm_simulator.py  cli.py  gbm_simulator.py
tests/: bm_test.py  cli_test.sh  gbm_test.py  python_test.sh  test_BMSimulator.py  test_GBMSimulator.py
